basic auth flow

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,21 @@ environment:
   sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
+  authentication_repository:
+    path: packages/authentication_repository
   bloc: ^8.0.3
+  equatable: ^2.0.3
+  firebase_auth: ^3.3.12
+  firebase_core: ^1.14.0
+  flow_builder: ^0.0.6
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
   flutter_localizations:
     sdk: flutter
+  form_inputs:
+    path: packages/form_inputs
+  formz: ^0.4.1
   intl: ^0.17.0
 
 dev_dependencies:
