--- a/packages/authentication_repository/pubspec.yaml
+++ b/packages/authentication_repository/pubspec.yaml
@@ -7,12 +7,16 @@ environment:
   sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^3.1.11
   equatable: ^2.0.3
   firebase_auth: ^3.3.12
   firebase_core: ^1.14.0
+  json_annotation: any
 
 dev_dependencies:
+  build_runner: any
   coverage: ^1.1.0
+  json_serializable: any
   mocktail: ^0.2.0
   test: ^1.19.2
   very_good_analysis: ^2.4.0
