--- a/packages/treatment_repository/pubspec.yaml
+++ b/packages/treatment_repository/pubspec.yaml
@@ -6,8 +6,17 @@ publish_to: none
 environment:
   sdk: ">=2.16.0 <3.0.0"
 
+dependencies:
+  cloud_firestore: ^3.1.12
+  firebase_core: ^1.14.1
+  json_annotation: ^4.4.0
+  uuid: ^3.0.6
+
 dev_dependencies:
+  build_runner: ^2.1.10
   coverage: ^1.1.0
+  equatable: ^2.0.3
+  json_serializable: ^6.1.6
   mocktail: ^0.2.0
   test: ^1.19.2
   very_good_analysis: ^2.4.0
