--- a/packages/dose_repository/pubspec.yaml
+++ b/packages/dose_repository/pubspec.yaml
@@ -1,4 +1,4 @@
-name: treatment_repository
+name: dose_repository
 description: A Very Good Project created by Very Good CLI.
 version: 1.0.0+1
 publish_to: none
@@ -20,3 +20,4 @@ dev_dependencies:
   mocktail: ^0.2.0
   test: ^1.19.2
   very_good_analysis: ^2.4.0
+
