--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
   cima_repository:
     path: packages/cima_repository
   dartz: ^0.10.1
-  dose_repository:
-    path: packages/dose_repository
+#  dose_repository:
+#    path: packages/dose_repository
   equatable: ^2.0.3
   firebase_auth: ^3.3.12
   firebase_core: ^1.14.0
