--- a/packages/notification_api/pubspec.yaml
+++ b/packages/notification_api/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 
 dependencies:
   flutter_local_notifications: ^9.4.1
+  flutter_native_timezone: ^2.0.0
 
 dev_dependencies:
   coverage: ^1.1.0
