--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,5 +6,7 @@ jobs:
   build:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
+      coverage_excludes: "*.g.dart"
       flutter_channel: stable
-      flutter_version: 2.10.0
+      flutter_version: 2.16.0
+      test_recursion: true
