--- a/packages/notification_api/pubspec.yaml
+++ b/packages/notification_api/pubspec.yaml
@@ -8,9 +8,9 @@ environment:
 dependencies:
   flutter_local_notifications: ^9.4.1
   flutter_native_timezone: ^2.0.0
+  intl: any
 
 dev_dependencies:
-  coverage: ^1.1.0
   mocktail: ^0.2.0
   test: ^1.19.2
   very_good_analysis: ^2.4.0
