--- a/packages/authentication_repository/pubspec.yaml
+++ b/packages/authentication_repository/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   cloud_firestore: ^3.1.11
   equatable: ^2.0.3
+  flutter:
+    sdk: flutter
   firebase_auth: ^3.3.12
   firebase_core: ^1.14.0
   json_annotation: any
@@ -16,8 +18,9 @@ dependencies:
 dev_dependencies:
   build_runner: any
   coverage: ^1.1.0
+  flutter_test:
+    sdk: flutter
   json_serializable: any
   mocktail: ^0.2.0
-  test: ^1.19.2
   very_good_analysis: ^2.4.0
 
